fixed scrollbars

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -119,7 +119,7 @@ a {
             margin-top: 2px;
             height: fit-content;
             max-height: 90vh;
-            overflow: auto
+            overflow: auto;
             /* Hide scrollbar on Windows/Chrome/Edge */
             scrollbar-width: thin; /* Firefox */
             scrollbar-color: transparent transparent; /* Firefox */
